Fri Jan  2 23:34:17 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the CUMODE channel founder authentication on normal
	  server to not remove the founder rights on existing founder
	  before checking that router accepts the mode change.  Affected
	  files are silcd/command.c and silcd/packet_receive.c.

	* Remove the server entry correctly when rekey timeouts and
	  remote router connection on normal server is closed.  Fixes
	  a crash where server uses the freed server entry.  Affected
	  file silcd/server.c.

Fri Jan 02 10:28:15 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* Add /SILCNET [ADD|REMOVE|LIST] command to manage different SILC
	  networks.  This is the first step in solving the bug about
	  /SERVER ADD -silcnet <silcnet>.  Affected files
	  irssi/docs/in/silcnet.in; irssi/src/fe-common/silc/Makefile.am,
	  fe-silcnet.c, fe-common-silc.c, module-formats.[ch];
	  irssi/src/silc/core/silc-chatnets.[ch], silc-core.c, Makefile.am

Thu Jan 01 20:11:32 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* /SMSG and /MMSG now correctly create new queries. Affected files
	  irssi/src/fe-common/silc/fe-messages.c, irssi/scripts/silc-mime.pl

	* Add basic support for SILC protocol specific variables in perl.
	  Affected files irssi/src/perl/silc/*, irssi/configure.in,
	  irssi/src/perl/Makefile.am

Wed Dec 31 17:06:55 CET 2003  Jochen Eisinger <jochen@penguin-breeder.org>

	* Don't use silc_get_input, it's obviously not reliable.  Fixes
	  issue when the current key expires.  Affect file
	  irssi/src/silc/core/clientutils.c

	* Make the session data filename configurable.  This makes it
	  possible to have different session files for different
	  SILC networks.  Affected files irssi/src/silc/core/silc-core.c,
	  client_ops.[ch], silc-servers.c,
	  irssi/src/silc/fe-common/silc/module-formats.[ch]

	* Use the same set of libtool files for the MPI lib as for the
	  rest of the toolkit.  Affected files lib/silcmath/mpi/config.guess,